[gd_scene load_steps=3 format=3 uid="uid://bplayer001"]

[ext_resource type="Script" path="res://player/Player.gd" id="1_player"]
[ext_resource type="Script" path="res://masks/MaskManager.gd" id="2_mask"]

[sub_resource type="CircleShape2D" id="CircleShape2D_player"]
radius = 16.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 1
script = ExtResource("1_player")

[node name="Visual" type="Node2D" parent="."]

[node name="MaskBase" type="ColorRect" parent="Visual"]
offset_left = -18.0
offset_top = -20.0
offset_right = 18.0
offset_bottom = 16.0
color = Color(1, 1, 1, 1)

[node name="MaskTop" type="ColorRect" parent="Visual"]
offset_left = -14.0
offset_top = -24.0
offset_right = 14.0
offset_bottom = -18.0
color = Color(1, 1, 1, 1)

[node name="MaskChin" type="ColorRect" parent="Visual"]
offset_left = -10.0
offset_top = 14.0
offset_right = 10.0
offset_bottom = 20.0
color = Color(1, 1, 1, 1)

[node name="EyeLeftOuter" type="ColorRect" parent="Visual"]
offset_left = -14.0
offset_top = -12.0
offset_right = -4.0
offset_bottom = 0.0
color = Color(0.1, 0.1, 0.1, 1)

[node name="EyeRightOuter" type="ColorRect" parent="Visual"]
offset_left = 4.0
offset_top = -12.0
offset_right = 14.0
offset_bottom = 0.0
color = Color(0.1, 0.1, 0.1, 1)

[node name="EyeLeftInner" type="ColorRect" parent="Visual"]
offset_left = -12.0
offset_top = -10.0
offset_right = -6.0
offset_bottom = -2.0
color = Color(0.3, 0.3, 0.5, 1)

[node name="EyeRightInner" type="ColorRect" parent="Visual"]
offset_left = 6.0
offset_top = -10.0
offset_right = 12.0
offset_bottom = -2.0
color = Color(0.3, 0.3, 0.5, 1)

[node name="NoseBridge" type="ColorRect" parent="Visual"]
offset_left = -2.0
offset_top = -4.0
offset_right = 2.0
offset_bottom = 8.0
color = Color(0.85, 0.85, 0.85, 1)

[node name="Brow" type="ColorRect" parent="Visual"]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = -12.0
color = Color(0.9, 0.9, 0.9, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_player")

[node name="MaskManager" type="Node" parent="."]
script = ExtResource("2_mask")
